# listed

./: CMakeLists.txt  listed.odt  main.cpp
uforia/: README.md  debug.h
